# scalermod

./: .env.example  .gitignore  .hfignore  Dockerfile  PROJECT_SUMMARY.txt  README.md  Readmenew.md  SUBMISSION.md  demo.py  inference.py  openenv.yaml  pyproject.toml  setup.bat  setup.sh
.github/workflows/: ci.yml
frontend/src/app/: page.tsx
frontend/src/app/arena/: page.tsx
frontend/src/app/builder/: page.tsx
frontend/src/app/playground/: page.tsx
frontend/src/components/: Navbar.tsx
scripts/: validate-submission.sh
server/: app.py
src/: __init__.py  agent.py  environment.py  scenarios.py  server.py  settings.py  tasks.py  terminal_emulator.py  virtual_filesystem.py
tests/: test_environment.py
web/: app.js  index.html  styles.css
