[project]
name = "linux-sre-env"
version = "2.0.0"
description = "Linux System Reliability Engineer Training Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "numpy>=1.26.0",
    "openai>=1.58.1",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "httpx==0.27.2",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
serve = "src.server:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
